src/App.css
.app {
	display: flex;
	justify-content: center;
	align-items: start;
	height: max-content;
	background-color: #ffffff;
}

.header {
	display: flex;
	justify-content: center;
	align-items: center;
}

.logo-text {
	font-size: 40px;
	color: #1f60c0;
	font-weight: bolder;
	font-family: sans-serif;
	margin: 5px 0px 15px 0px;
}

.logo-text span {
	color: #000000;
}

.profile-list {
	width: 340px;
	background-color: #ffffff;
	padding: 10px 20px 20px 20px;
}

.logo {
	height: 80px;
	margin-bottom: 10px;
}

.text-container {
	flex: 1;
	display: flex;
	flex-direction: column;
	margin-left: 5px;
}

.text-name {
	font-size: 17px;
	display: flex;
	text-overflow: ellipsis;
	margin: 0px;
}

.text-position {
	font-size: 12px;
	display: flex;
	text-overflow: ellipsis;
	color: #7e7e7e;
	margin: 0px;
}

.profile-card {
	display: flex;
	flex-direction: column;
	padding: 5px;
	margin-bottom: 10px;
	border-radius: 13px;
	border: 2px black solid;
	background: #ffffff;
}

.profile-content {
	display: flex;
	flex: 1;
	flex-direction: row;
	align-items: center;
	cursor: pointer;
}

.profile-image {
	border-radius: 50%;
	width: 50px;
	height: 50px;
	margin: 5px;
}

.delete-button {
	background: none;
	border: none;
	cursor: pointer;
}

.comment-button {
	background: none;
	border: none;
	cursor: pointer;
}

.add-profile {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 15px;
	border: 2px dashed #707070;
	border-radius: 12px;
	margin-top: 10px;
	cursor: pointer;
}

.add-profile button {
	background: none;
	border: none;
	color: #707070;
	font-size: 16px;
	cursor: pointer;
}

.comment-modal {
	display: flex;
	flex-direction: column;
	align-items: center;
	border: 1px solid #212121;
	border-radius: 8px;
	margin: 5px;
}

.comment-textarea {
	display: flex;
	margin-top: 3px;
	height: 70px;
	width: 98%;
	border-radius: 8px;
	font-family: sans-serif;
	font-size: 14px;
	border: none;
	outline: none;
	resize: none;
}

.submit-button {
	display: flex;
	background: none;
	flex-direction: row;
	border: none;
	cursor: pointer;
	width: 60px;
	height: 25px;
	padding-bottom: 3px;
	border-radius: 16px;
	margin-bottom: 5px;
	background-color: #46db55;
}

.submit-button-text {
	display: flex;
	flex: 1;
	color: white;
	font-size: 14px;
	justify-content: center;
	align-items: center;
}

